--- a/Kapitel3/Introduktion.tex
+++ b/Kapitel3/Introduktion.tex
@@ -1,14 +1,14 @@
 \chapter{Forsøg}
 Hele denne opgave tager udgangspunkt i et forsøg.
-Jeg vil her forsøge at beskrive dette forsøg, og udnytte den matematik, jeg har beskrevet, til at finde ud af om de opstillede differentialligninger fra afsnit \ref{teori: opsatning af differentialligninger} rent faktisk passer på virkeligheden.
+Jeg vil her beskrive dette forsøg, og udnytte den matematik, jeg har beskrevet, til at finde ud af om de opstillede differentialligninger fra afsnit \ref{teori: opsatning af differentialligninger} rent faktisk passer på virkeligheden.
 
 Jeg har udført to forsøg, som hvert i sær er tænkt til at afprøve et stykke teori:
 \begin{itemize}
-	\item Svingning af lod i luft i kort
+	\item Svingning af lod i luft i kort tid
 	\item Svingning af lod i luft i længere tid
 \end{itemize}
 
 Det første forsøg er ment til at skulle passe på differentialligningen uden dæmpningsled.
 
-Det andet forsøg er tænkt til at at passe med et dæmpningsled ved lav hastighed, og altså derfor med dæmpningsledet i 1. potens.
-Dette forsøg forsøger også at undersøge, om en model med dæmpningsleder i anden vil fungere bedre, end en hvor det er i første. 
+Det andet forsøg er tænkt til at passe med et dæmpningsled ved lav hastighed, og altså derfor med dæmpningsledet i 1. potens.
+Dette forsøg undersøger også om en model med dæmpningsledet i anden potens vil fungere bedre, end en med leddet i første potens.  
