Gennemlæsning af kapitel 4

--- a/Kapitel4/Sammenfatning.tex
+++ b/Kapitel4/Sammenfatning.tex
@@ -2,12 +2,12 @@
 Efter at have undersøgt den harmoniske svingning teoretisk, har det været muligt for mig at opsætte en model til at beskrive bevægelsen. 
 Denne model gav anledning til matematiske problemstillinger som ikke har været behandlet i gymnasiet.
 Mere specifikt fik jeg brug for at kunne løse en andenordens lineær homogen differentialligning. 
-Dette problem behandlede jeg matematisk, og jeg fandt frem til en fuldstændig løsning for differentialligning, som jeg delvist fik givet et bevis for. 
-Med denne løsning lykkedes det mig at kunne lave et stedfunktion ud fra min differentialligningsmodel.
-Jeg udførte da eksperimenter, der skulle undersøge, hvor godt denne stedfunktion (og dermed også differentialligningen fra min model) passede på.
+Dette problem behandlede jeg matematisk, og jeg fandt frem til en fuldstændig løsning for differentialligningen, som jeg delvist fik givet et bevis for. 
+Med denne løsning lykkedes det mig at kunne lave en stedfunktion ud fra min differentialligningsmodel.
+Jeg udførte så eksperimenter, der skulle undersøge, hvor godt denne stedfunktion (og dermed også differentialligningen fra min model) passede.
 Det viste sig, at modellen passede ganske godt, på det jeg observerede.
-Dog var der mindre problemer med modellen.
-Jeg undersøgte problemet og fandt en model, som ville passe bedre i fysikken, men som dog var et væsentligt mere udfordrende matematisk problem.
+Dog var der mindre problemer med modellen, som jeg undersøgte og løste ved at finde en model, som passede bedre i fysikken, men som dog var et væsentligt mere udfordrende matematisk problem.
 
-Det er altså derfor lykkedes mig at beskrive den harmonisk dæmpede svingning med en forholdsvist god fysisk model, ved hjælp af matematisk analyse af en differentialligningsmodel. 
+Det er altså lykkedes mig at beskrive den harmonisk dæmpede svingning med en forholdsvist god fysisk model, ved hjælp af matematisk analyse af en differentialligningsmodel.
+ 
 Af videre arbejde ville det være godt at kunne studere den forbedrede model, og se, om der kan findes måder at beskrive den nemmere matematisk. 
