Tilføjede billede af forsøgsopstilling

--- a/Kapitel3/Eksperiment1.tex
+++ b/Kapitel3/Eksperiment1.tex
@@ -55,9 +55,15 @@ x(t)=A\sin (\frac{k}{m}t+\phi)
 
 hvor $\phi$ er en eller anden konstant. 
 
+\begin{wrapfigure}{r}{0.4\textwidth}
+\centering
+\includegraphics[scale=0.4]{Figurer/Opstilling}
+\caption{Billede af forsøgopstilling der blev brugt i forsøg 1 og 2.}
+\end{wrapfigure}
 
 \subsection{Data}\label{exp1: Data}
-\subsubsection{Svingning}
+
+
 Data til dette forsøg er vedlagt som bilag i filen ''Forsøg 1 - Data.pdf''.
 Denne fil indeholder alt rådata opsamlet af ultralydsensoren i de 10 forsøg (OBS. filen er $130$ sider lang, da der er blevet opsamlet $40$ målinger i sekundet). 
 Forsøg nummer 10 er placeret først, grundet måden mit dataopsamlingsprogram fungerer på.
@@ -69,6 +75,7 @@ Denne fil indeholder data til bestemmelse af fjederkonstanten.
 \subsubsection{Masse af fjeder og lod}\label{exp1: Masse af fjeder og lod}
 Jeg har målt massen af lodet og af fjederen i forbindelse med forsøget. 
 Disse to er nedskrevet i tabel \ref{tabel: Masser forsog 1}.
+\pagebreak
 \begin{table}[h]
 \centering
 \begin{tabular}{|c|c|}
