Tilføjede officel forside

--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 \usepackage{preamble}
 \usepackage{opstilling}
 \usepackage{referencekommandoer}
+\usepackage{pdfpages}
 
 \author{Mikkel B. Goldschmidt \\ 3r, Nørre Gymnasium \\ SRP i matematik og fysik}
 
@@ -19,6 +20,8 @@
 
 \title{Dæmpede svingninger og differentialligninger}
 \begin{document}
+\includepdf[pages=1]{Forside.pdf}
+
 \maketitle
 
 \begin{singlespacing}
