--- a/bibliografi.tex
+++ b/bibliografi.tex
@@ -23,6 +23,7 @@
   Stougaard Jensen/Albertlund
   
 \bibitem{DTU-Kompleks}
+Karsten Schmidt,
 (11. december 2016, Sætning 29.44), Komplekse tal. Hentet fra:
 \url{http://01005.mat.dtu.dk/materialer/enoter/afsnit/NUID43-tn29/}
 
