Tjekkede alt fart og hastighed igennem

--- a/Kapitel1/OpsatningBeskrivelse.tex
+++ b/Kapitel1/OpsatningBeskrivelse.tex
@@ -36,7 +36,8 @@ som vi ser er en differentialligning i $x(t)$.
 \subsubsection{Differentialligning med dæmpning}\label{teori: Opstilling af ligning med dampning}
 Vi kan på samme måde som i forrige afsnit opskrive et udtryk, der beskriver den resulterende kraft på loddet. 
 Denne gang skal der bare trækkes et led mere fra på højresiden - nemlig luftmodstanden. 
-Da vi i de fleste bevægelser med lav fart tilnærmelsesvist kan beskrive luftmodstanden som værende proportional med hastigheden(se \ref{teori:vindmodstand}), kan vi skrive den som $- \mu x'(t)$ hvor $\mu$ er en proportionalitetskonstant, og $x'(t)$ er stedfunktionen differentieret (og altså en beskrivelse af farten til tiden $t$\refFysA{187}).
+Da vi i de fleste bevægelser med lav fart tilnærmelsesvist kan beskrive luftmodstanden som værende proportional med hastigheden\footnotemark(se \ref{teori:vindmodstand}), kan vi skrive den som $- \mu x'(t)$ hvor $\mu$ er en proportionalitetskonstant, og $x'(t)$ er stedfunktionen differentieret (og altså en beskrivelse af hastigheden til tiden $t$\refFysA{187}).
 her får vi altså en differentialligning på formen $m\cdot x''(t)=-k\cdot x(t)-\mu x'(t)$ eller omskrevet:
 $$m\cdot x''(t)+\mu x'(t)+k\cdot x(t)=0$$
 Fremover vil $\mu x(t)$ blive omtalt som \textit{dæmpningsledet}, da det netop er luftmodstanden der gør, at bevægelsen ikke bliver ved for evigt, da den giver anledning til en dæmpning. 
+\footnotetext{Når jeg vælger at bruge hastighed her, så er det fordi, at det er et fortegn på der har betydning. Dette gør, at vi betragter en endimensional vektor, og jeg bruger derfor hastighed i stedet for fart.}
