--- a/Kapitel2/IkkeLinear.tex
+++ b/Kapitel2/IkkeLinear.tex
@@ -1,7 +1,7 @@
 \subsection{Den ikke-lineære andenordens homogene differentialligning}
 \label{teori: Den ikke-linear andenordens ligning}
 I det vi indtil videre kun har kigget på den andenordens \textit{lineære} homogene differentialligning, har vi lavet nogle antagelser som gør matematikken pæn, men disse holder dog ofte ikke i fysikkens verden.
-Hvis man ser tilbage på afsnit \ref{teori:vindmodstand} om vindmodstand, har vi faktisk kun lavet matematisk teori der beskriver bevægelse ved lave hastigheder, da vi kun har kigget på, når dæmpningsledet er i første. 
+Hvis man ser tilbage på afsnit \ref{teori:vindmodstand} om vindmodstand, har vi faktisk kun lavet matematisk teori der beskriver bevægelse ved lav fart, da vi kun har kigget på, når dæmpningsledet er i første. 
 I afsnittet er det også beskrevet at det er en bedre model, specielt ved høj fart, at regne med at kraften er proportional med vindens fart i anden.
 Dette ville give anledning til en differentiallligning på formen:
 
