--- a/Kapitel1/FysikBaggrund.tex
+++ b/Kapitel1/FysikBaggrund.tex
@@ -13,4 +13,4 @@ Den siger, at massen ganget med accelerationen af et objekt, giver den kraft, so
 \subsection{Vindmodstand}\label{teori:vindmodstand}
 Når et objekt bevæger sig gennem luft eller en væske med en fart $v$, vil det have en gnidning med luften omkring sig, hvilket vil gøre farten mindre.
 Ved et opslag i en formelsamling, ser man at kraften som vindmodstanden virker med, er proportional med farten i anden. 
-Ved lave hastigheder er dette dog næsten det samme som, at den er proportional med farten i første, og dette kan derfor være en okay antagelse af gøre sig i visse tilfælde\refMekanik{11}.
+Ved lav fart er dette dog næsten det samme som, at den er proportional med farten i første, og dette kan derfor være en okay antagelse af gøre sig i visse tilfælde\refMekanik{11}.
