--- a/Kapitel3/Introduktion.tex
+++ b/Kapitel3/Introduktion.tex
@@ -10,5 +10,5 @@ Jeg har udført to forsøg, som hvert i sær er tænkt til at afprøve et stykke
 
 Det første forsøg er ment til at skulle passe på differentialligningen uden dæmpningsled.
 
-Det andet forsøg er tænkt til at passe med et dæmpningsled ved lav hastighed, og altså derfor med dæmpningsledet i 1. potens.
+Det andet forsøg er tænkt til at passe med et dæmpningsled ved lav fart, og altså derfor med dæmpningsledet i 1. potens.
 Dette forsøg undersøger også om en model med dæmpningsledet i anden potens vil fungere bedre, end en med leddet i første potens.  
