--- a/Kapitel1/FysikBaggrund.tex
+++ b/Kapitel1/FysikBaggrund.tex
@@ -1,5 +1,5 @@
 \section{Nødvendig fysisk baggrundsteori}
-\subsection{Hooks lov}\label{teori:Hooks lov}
+\subsection{Hookes lov}\label{teori:Hooks lov}
 Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen\refFysA{286}. 
 Dette giver anledning til formlen 
 $$F =k\cdot x$$
