--- a/Kapitel1/OpsatningBeskrivelse.tex
+++ b/Kapitel1/OpsatningBeskrivelse.tex
@@ -1,6 +1,6 @@
 \section{Forsøgsopsætning}\label{teori: opsatning af differentialligninger}
 Hele denne opgave tager udgangspunkt i et forsøg.
-I forsøget hænges et lod op i en fjeder der opfylder Hooks lov (se \ref{teori:Hooks lov}). 
+I forsøget hænges et lod op i en fjeder der opfylder Hookes lov (se \ref{teori:Hooks lov}). 
 Da tilføres loddet energi, således at det begynder at svinge. 
 På figur \ref{fig:Basis Forsogsopsaetning} ses en skitse af forsøgets opsætning.
 
