Lavede min egen forside

--- a/main.tex
+++ b/main.tex
@@ -18,11 +18,33 @@
 
 
 
+
+
 \title{Dæmpede svingninger og differentialligninger}
 \begin{document}
 \includepdf[pages=1]{Forside.pdf}
 
-\maketitle
+\begin{titlepage}
+	\centering
+	
+	{\scshape\LARGE Nørre Gymnasium\par}
+	\vspace{1cm}
+	{\scshape\Large SRP \\ \large Matematik og Fysik\par}
+	\vspace{1.5cm}
+	{\huge\bfseries Dæmpede svingninger og differentialligninger\par}
+	\vspace{2cm}
+	{\Large\itshape Mikkel B. Goldschmidt\par}
+	
+	
+	\vfill
+	vejleder\par
+	Kim Vedel Pedersen
+	\vfill
+
+% Bottom of the page
+	{\large Aflevering: 21. december 2016\par}
+\end{titlepage}
+
 
 \begin{singlespacing}
 \tableofcontents
