Skrev Formalia på forsiden

--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 \lfoot{Mikkel B. Goldschmidt}
 \rfoot{3r, Nørre Gymnasium}
 
-
+\usepackage{framed}
 
 
 
@@ -33,7 +33,7 @@
 	\vspace{1.5cm}
 	{\huge\bfseries Dæmpede svingninger og differentialligninger\par}
 	\vspace{2cm}
-	{\Large\itshape Mikkel B. Goldschmidt\par}
+	{\Large\itshape Mikkel Bjørn Goldschmidt\par }
 	
 	
 	\vfill
@@ -41,6 +41,15 @@
 	Kim Vedel Pedersen
 	\vfill
 
+	\begin{framed}
+	\textbf{Formalia}\\
+	Denne opgave er skrevet i \LaTeX  og koden ligger offentligt tilgængeligt på GitHub på dette link: \url{https://github.com/mikkelbjoern/SRP---Den-harmoniske-svingning}\\
+	
+	Opgaven har samlet $x$ linjer, som er talt sammen i skriftstørrelse $12$ uden billeder og figurer. 
+	Dette giver samlet $\frac{x}{32}$ sider med en side værende $32$ linjer.
+	\end{framed}
+
+	\vfill
 % Bottom of the page
 	{\large Aflevering: 21. december 2016\par}
 \end{titlepage}
