Satte dokument op til linjetælling

--- a/Kapitel1/FysikBaggrund.tex
+++ b/Kapitel1/FysikBaggrund.tex
@@ -2,7 +2,11 @@
 \subsection{Hookes lov}\label{teori:Hooks lov}
 Når man hiver i en fjeder, vil den have en kraft, modsatrettet den retning man hiver, der er proportional med hvor meget man har strukket fjederen\refFysA{286}. 
 Dette giver anledning til formlen 
-$$F =k\cdot x$$
+
+\begin{equation}
+F =k\cdot x
+\end{equation}
+
 hvor $x$ er den længde som fjederen er strukket, $F$ er kraften som fjederen trækker med, og $k$ er proportionalitetskonstanten. 
 $k$ kaldes i denne sammenhæng for fjederkonstanten.
 
