--- a/Kapitel1/MatematikBaggrund.tex
+++ b/Kapitel1/MatematikBaggrund.tex
@@ -15,7 +15,11 @@ Ved en \textit{homogen} differentialligning i variablen $x$, forstås en differe
 \newcommand{\LDiff}[1]{a_{#1} \cdot \frac{d^{#1}y}{d x^{#1}}}
 \begin{definition}
 Ved en lineær differentialligning i $y$, forstås en ligning på formen:
-$$\LDiff{n} + \LDiff{n-1} + \LDiff{n-2}+...+\LDiff{2}+\LDiff{1}=a_0$$
+
+\begin{equation}
+\LDiff{n} + \LDiff{n-1} + \LDiff{n-2}+...+\LDiff{2}+\LDiff{1}=a_0
+\end{equation}
+
 hvor $n$ er et naturligt tal, $y$ er en funktion af $x$, og alle $a$'erne er reelle ikke nødvendigvis forskellige konstanter og $a_n \neq 0$.
 Vi siger da, at differentialligningen har orden $n$.
 
