--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper,openany,oneside]{book}
+\documentclass[12pt,a4paper,openany,oneside]{book}
 \usepackage{preamble}
 \usepackage{opstilling}
 \usepackage{referencekommandoer}
@@ -17,49 +17,13 @@
 
 \usepackage{framed}
 
-
+\usepackage[displaymath, mathlines,left]{lineno}
+\linenumbers
 
 
 \title{Dæmpede svingninger og differentialligninger}
 \begin{document}
-\includepdf[pages=1]{Forside.pdf}
 
-\begin{titlepage}
-	\centering
-	
-	{\scshape\LARGE Nørre Gymnasium\par}
-	\vspace{1cm}
-	{\scshape\Large SRP \\ \large Matematik og Fysik\par}
-	\vspace{1.5cm}
-	{\huge\bfseries Dæmpede svingninger og differentialligninger\par}
-	\vspace{2cm}
-	{\Large\itshape Mikkel Bjørn Goldschmidt\par }
-	
-	
-	\vfill
-	vejleder\par
-	Kim Vedel Pedersen
-	\vfill
-
-	\begin{framed}
-	\textbf{Formalia}\\
-	Denne opgave er skrevet i \LaTeX  og koden ligger offentligt tilgængeligt på GitHub på dette link: \url{https://github.com/mikkelbjoern/SRP---Den-harmoniske-svingning}\\
-	
-	Opgaven har samlet $x$ linjer, som er talt sammen i skriftstørrelse $12$ uden billeder og figurer. 
-	Dette giver samlet $\frac{x}{32}$ sider med en side værende $32$ linjer. 
-	Indholdsfortegnelse, forside, litteratur- og bilagsliste er ikke talt med.
-	\end{framed}
-
-	\vfill
-% Bottom of the page
-	{\large Aflevering: 21. december 2016\par}
-\end{titlepage}
-
-
-\begin{singlespacing}
-\tableofcontents
-\end{singlespacing}
-\pagebreak
 
 \input{abstract}
 
@@ -84,8 +48,6 @@
 
 \input{Kapitel5/Introduktion}
 
-\input{bibliografi}
-\input{Bilagsliste}
 
 
 \end{document}
