--- a/main.tex
+++ b/main.tex
@@ -43,10 +43,10 @@
 
 	\begin{framed}
 	\textbf{Formalia}\\
-	Denne opgave er skrevet i \LaTeX  og koden ligger offentligt tilgængeligt på GitHub på dette link: \url{https://github.com/mikkelbjoern/SRP---Den-harmoniske-svingning}\\
+	Denne opgave er skrevet i \LaTeX,  og koden ligger offentligt tilgængeligt på GitHub på dette link: \url{https://github.com/mikkelbjoern/SRP---Den-harmoniske-svingning}\\
 	
-	Opgaven har samlet $x$ linjer, som er talt sammen i skriftstørrelse $12$ uden billeder og figurer. 
-	Dette giver samlet $\frac{x}{32}$ sider med en side værende $32$ linjer. 
+	Opgaven har samlet $601$ linjer, som er talt sammen i skriftstørrelse $12$ uden billeder og figurer. 
+	Dette giver samlet $18.8$ sider med en side værende $32$ linjer. 
 	Indholdsfortegnelse, forside, litteratur- og bilagsliste er ikke talt med.
 	\end{framed}
 
