Fiksede definition af karakterligningen med tilføjelse af rødder

--- a/Kapitel2/AndenOrden.tex
+++ b/Kapitel2/AndenOrden.tex
@@ -33,6 +33,8 @@ Det vil vise sig senere, at en tilhørende andengradsligning til en lineær ande
 \begin{definition}[Karakterligningen]
 Karakterligningen for en lineær homogen andenordens differentialligning $y'' + by' + cy = 0$, er ligningen $r^2 + br + c = 0$. 
 Denne ligning har som bekendt en eller to komplekse løsninger (bemærk at de reelle tal er indeholdt i de komplekse) $r_1 = \frac{-b + \sqrt{b^2 - 4c}}{2}$ og $r_2 = \frac{-b - \sqrt{b^2 - 4c}}{2}$.
+
+Da andengradsligninger ofte er opstået ud fra polynomier, vil løsningerne til karakterligningen nogen gange blive refereret til som \textit{rødder}.
 \end{definition}
 
 Jeg vil i denne udledning kigge på to tilfælde af karakterligningen. 
