--- a/Kapitel5/Introduktion.tex
+++ b/Kapitel5/Introduktion.tex
@@ -1,6 +1,6 @@
 \chapter{Perspektivering - Affjedring af biler}
 Den harmoniske svingning optræder mange andre steder i mekanikken end bare når et lod svinger i en fjeder.
-Det ses blandt i forbindelse med penduler og generet med ting der drejer rundt.
+Den ses blandt i forbindelse med penduler og generelt med ting der drejer rundt.
 Derudover er det også relevant at kigge på i forbindelse med større bygninger som eksempelvis broer, der kan gå i svingninger hvis de ikke er konstrueret rigtigt. 
 
 Et andet sted hvor man kan se svingninger af fjedre meget markant er i forbindelse med affjedring af biler. 
@@ -25,11 +25,12 @@ En skitse af dette kan ses på figur \ref{fig: Affjedring af bil}.
 \label{fig: Affjedring af bil}
 \end{wrapfigure}
 
-Fjederen er til for at sørge for at bilen hele tiden fastholder kontakt med vejen - også selvom den kører over en ujævnhed i vejen. 
+Fjederen er til for at sørge for at bilen hele tiden fastholder kontakt med vejen - også selvom den kører over en ujævnhed. 
 Hvis fjederen går i stykker, kan det være meget problematisk. 
 Der kan ske det, at fjederen dæmper for langsomt og at man derfor oplever at bilen hopper.
 En video af af dette kan ses på YouTube\refBilVideo.
-Som det ses på videoen, så bliver bilen ved med at svinge efter at manden har givet slip. 
+På videoen ser vi en mand, der trykker på forenden af sin bil. 
+Når han giver slip, står bilen og svinger op og ned. 
 Hvis man betragter denne svingning med den teori der er beskrevet i denne opgave, så svarer bilen til vores lod.
 Vi er da interesserede i at få svingningen af bilen til at dø ud så hurtigt som muligt. 
 Her arbejder vi ikke med luftmodstand, men derimod med en mekanisk dæmpning. 
@@ -52,5 +53,11 @@ Vi ved nemlig intet om $\xi$ og om hvordan dæmpning skabes.
 I forhold til videoen, kan vi se at bilen lige pludselig svinger og at karakterligningen derfor må have komplekse løsninger.
 Vi ved derfor at der er sket en ændring af $k,m$ og $\xi$ sådan at det ikke længere gælder at $4mk \leq \xi ^2 $.
 Da bilens masse, $m$, formentlig ikke har ændret sig, må vi altså enten have at $k$ er blevet større eller at $\xi$ er blevet mindre. 
-Oversat til fysik, har vi altså enten at fjederen er blevet mere hård og derfor har en højere fjederkonstant eller at dæmpningssystemet ikke fungerer som det skal.  
+Oversat til fysik, har vi altså enten at fjederen er blevet mere hård og derfor har en højere fjederkonstant eller at dæmpningssystemet ikke fungerer som det skal.
+
+\vspace{0.75cm}
+
+Bemærk, at dette ikke på nogen måde er baseret eksperimentelt    på biler, men bare er et forsøg på at overføre min model fra loddet til en bil. 
+Det er mange ting, der bør tages højde for, som denne perspektivering ikke kigger på.
+Dog kan det ses at modellen, som der er fundet frem til i denne opgave, ikke er irrelevant til at beskrive andre fysiske fænomener.
 
